@@ -102,6 +102,16 @@ typedef struct _hashElement
  */
 -(NSUInteger) numberOfRunningActionsInTarget:(id)target;
 
+/** Pauses all running actions, returning a list of targets whose actions were paused.
+ @since 1.1RC0
+ */
+-(NSSet *) pauseAllRunningActions;
+	
+/** Resume a set of targets (convenience function to reverse a pauseAllRunningActions call)
+ @since 1.1RC0
+*/	
+-(void) resumeTargets:(NSSet *)targetsToResume;
+
 /** Pauses the target: all running actions and newly added actions will be paused.
  */
 -(void) pauseTarget:(id)target;
