@@ -3,7 +3,10 @@ version 1.1-rc0 ..-..-2012
             CCParticleSystem: fix for correctly fading out particles with premultiplied and non premultiplied textures and avoiding black halo's
 . [NEW] ProgressTimer: conforms to CCRGBAProtocol, action like FadeIn/Out can now run on the timer
 . [NEW] Macros: made CCLOG a bit more verbose
-. [NEW] ActionInterval: CCFadeIn and CCFadeOut respect initial opacity of node(issue #828) 
+. [NEW] Actions 
+        ActionInterval: CCFadeIn and CCFadeOut respect initial opacity of node(issue #828) 
+        ActionManager: pausing and resuming all running actions 
+        
 . [NEW] Node: added convenience method setAnchorPointWithoutPositionChange, to change a relative anchor point but not change the position of the node.
 . [NEW] Sprite: added useTrimmedFrameForAnchorPoint property. This makes the trimmed frame frame of reference for the anchorpoint and contentSize.
 . [NEW] DrawPrimitives: added inPixels versions of each function. 
